Bug 390507 - No properties dialog for message widgets
Summary: No properties dialog for message widgets
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.1 (KDE Applications 17.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-15 15:13 UTC by Ralf Habacker
Modified: 2018-03-05 23:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.80 (KDE Applications 18.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-15 15:13:13 UTC
In umbrello each graphical widget has a property dialog for setting style and font properties reachable by double left click on the widget or context menu except message widgets.

How to reproduce:
1. start umubrello
2. add a sequence diagram
3. add two objects
4. add a message between the two objects
5. select the message and open the context menu

What happens ?
There is no entry property

What is expected ?
There should be a property menu entry named "properties" showing general, style and font properties.
Comment 1 Ralf Habacker 2018-02-27 05:24:29 UTC
Git commit a5b5a46a52c36ca45288e3d3272470eac3545daa by Ralf Habacker.
Committed on 27/02/2018 at 05:24.
Pushed by habacker into branch 'master'.

Move operation properties dialog related setup and applying code into class SelectOperationDialog

Dialog setup from widget/umlobject and applying to them was implemented
in client code (class FloatingTextWidget) instead of the related dialog
class, which makes it hard to reuse the operation properties dialog from
other locations.

M  +70   -2    umbrello/dialogs/selectoperationdialog.cpp
M  +7    -1    umbrello/dialogs/selectoperationdialog.h
M  +3    -52   umbrello/umlwidgets/floatingtextwidget.cpp

https://commits.kde.org/umbrello/a5b5a46a52c36ca45288e3d3272470eac3545daa
Comment 2 Ralf Habacker 2018-03-05 23:52:56 UTC
Git commit da5e2cfdb84a42d5e3d5a577587f8e397fecc19b by Ralf Habacker.
Committed on 05/03/2018 at 23:48.
Pushed by habacker into branch 'master'.

Use method showPropertiesDialog() also in class MessageWidget

M  +18   -9    umbrello/umlwidgets/messagewidget.cpp
M  +2    -2    umbrello/umlwidgets/messagewidget.h
M  +2    -9    umbrello/umlwidgets/umlwidget.cpp

https://commits.kde.org/umbrello/da5e2cfdb84a42d5e3d5a577587f8e397fecc19b
Comment 3 Ralf Habacker 2018-03-05 23:52:56 UTC
Git commit b8a1906b544f389bd3c1b3ce6b892c50b4f36d97 by Ralf Habacker.
Committed on 05/03/2018 at 23:51.
Pushed by habacker into branch 'master'.

Add dialog for message widgets with general, style and font page

The general page named class SelectOperationPage has been created
from class SelectOperationDialog and has been extended with a
widget editing field similar to other page.

The class SelectOperationPage may be used by SelectOperationDialog
in future to avoid duplicate implementations.

This commit also includes a required fix to let style page be
vertical aligned to the top.
FIXED-IN:2.24.80 (KDE Applications 18.03.80)

M  +3    -0    umbrello/CMakeLists.txt
A  +61   -0    umbrello/dialogs/messagewidgetpropertiesdialog.cpp     [License: GPL (v2+)]
A  +42   -0    umbrello/dialogs/messagewidgetpropertiesdialog.h     [License: GPL (v2+)]
M  +26   -6    umbrello/dialogs/multipagedialogbase.cpp
M  +8    -0    umbrello/dialogs/multipagedialogbase.h
A  +342  -0    umbrello/dialogs/pages/selectoperationpage.cpp     [License: GPL (v2+)]
A  +91   -0    umbrello/dialogs/pages/selectoperationpage.h     [License: GPL (v2+)]
M  +2    -0    umbrello/dialogs/pages/umlwidgetstylepage.cpp
M  +4    -4    umbrello/umlwidgets/messagewidget.cpp

https://commits.kde.org/umbrello/b8a1906b544f389bd3c1b3ce6b892c50b4f36d97