Add dialog for message widgets with general, style and font page

The general page named class SelectOperationPage has been created
from class SelectOperationDialog and has been extended with a
widget editing field similar to other page.

The class SelectOperationPage may be used by SelectOperationDialog
in future to avoid duplicate implementations.

This commit also includes a required fix to let style page be
vertical aligned to the top.

BUG:390507
FIXED-IN:2.24.80 (KDE Applications 18.03.80)